# yt-dlq

./: .gitignore  README.md  __main__.py  dl_bin.py  download_ffmpeg.py  main.py  pyproject.toml  requirements.txt  utils.py
config/: logging_windows.cfg
data/: to_download.txt
scripts/: download_ffmpeg.py  filter.py  filter_manual.py
utils/: args.py  gui.py  state.py  string.py  url.py
yt_dlq/: __main__.py  args.py  download.py  file.py  patches.py  playlist_group_urls_fixed.json  state.py  types.py  url.py  utils.py
yt_dlq/postprocessors/: __init__.py  youtube_music_lyrics_pp.py  youtube_music_square_thumbnail_pp.py
yt_dlq/url/: info_extractor.py  utils.py
