[project]
name = "yt-dlq"
version = "0.5.0"

[tool.setuptools]
packages = ["yt_dlq"]

[tool.isort]
profile = "black"
known_first_party="utils_python"

[tool.poetry.scripts]
yt-dlq = "yt_dlq.__main__:main"

[tool.poetry]
name = "yt-dlq"
version = "0.5.0"
description = ""
authors = ["qwrwed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
utils-python = {git = "https://github.com/qwrwed/utils-python.git"}
requests = "^2.28"
tqdm = "^4.66.1"
readchar = "^4.0.5"
mergedeep = "^1.3.4"
prettyprinter = "^0.18.0"
configargparse = "^1.7"
yt-dlp = ">=2024.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
