[project]
name = "yt-dlq"
version = "0.5.0"
description = ""
authors = [
    {name = "qwrwed",email = "2429893+qwrwed@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "utils-python @ git+https://github.com/qwrwed/utils-python.git",
    "requests (>=2.28,<3.0)",
    "tqdm (>=4.66.1,<5.0.0)",
    "readchar (>=4.0.5,<5.0.0)",
    "mergedeep (>=1.3.4,<2.0.0)",
    "prettyprinter (>=0.18.0,<0.19.0)",
    "configargparse (>=1.7.1,<2.0.0)",
    "yt-dlp (>=2025.9.5)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["yt_dlq"]

[tool.isort]
profile = "black"
known_first_party="utils_python"

[tool.poetry.scripts]
yt-dlq = "yt_dlq.__main__:main"
